--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/fs-extra": "^8.0.0",
     "@types/jest": "^24.0.15",
     "fs-extra": "^8.1.0",
+    "husky": "^3.0.0",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -32,5 +33,11 @@
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && pretty-quick --staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
