--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "description": "Template for developing Chrome extensions",
   "author": "Eric Liu (https://github.com/metonym)",
-  "main": "dist/background.js",
   "scripts": {
     "develop": "yarn clean && rollup -cw",
     "build": "yarn clean && rollup -c",
@@ -26,10 +25,16 @@
     "pretty-quick": "^1.11.1",
     "rollup": "^1.22.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-livereload": "^1.0.3",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript2": "^0.24.3",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.3",
+    "svelte": "^3.12.1",
     "ts-jest": "^24.1.0",
+    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.3"
