--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^8.1.0",
     "husky": "^3.0.7",
     "jest": "^24.9.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "rollup": "^1.23.1",
