--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.3",
     "svelte": "^3.12.1",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
