--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "node scripts/clean.js",
     "develop": "run-s clean && rollup -cw",
     "build": "run-s clean && rollup -c",
+    "postbuild": "hash-static dist/index.html",
     "lint": "tslint --fix -p . -c tslint.json",
     "prettier": "prettier --write ./src/**.{ts,svelte}",
     "test": "jest --coverage",
@@ -24,6 +25,7 @@
     "@types/fs-extra": "^8.0.0",
     "@types/jest": "^24.0.18",
     "fs-extra": "^8.1.0",
+    "hash-static": "^0.1.0",
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
